--- a/layouts/partials/sidemenu.html
+++ b/layouts/partials/sidemenu.html
@@ -1,35 +1,44 @@
 <!-- Menu toggle -->
 <a href="#menu" id="menuLink" class="menu-link">
-  <!-- Hamburger icon -->
-  <span></span>
+    <!-- Hamburger icon -->
+    <span></span>
 </a>
 <div id="menu">
-
-  {{ partial "brand.html" . }}
-
-  <div class="pure-menu">
-    <ul class="pure-menu-list">
-      {{ range .Site.Menus.main }}
-      {{ if .HasChildren }}
-        <li class="pure-menu-item pure-menu-has-children">
-          <a class="pure-menu-link" href="#">{{ .Pre }}{{ .Name }}</a>
-          <ul class="pure-menu-children">
-            {{ range .Children }}
+    {{ partial "brand.html" . }}
+    <div class="pure-menu">
+        <ul class="pure-menu-list">
+            {{ range .Site.Menus.main }} {{ if .HasChildren }}
+            <li class="pure-menu-item pure-menu-has-children">
+                <a class="pure-menu-link" href="#">{{ .Pre }}{{ .Name }}</a>
+                <ul class="pure-menu-children">
+                    {{ range .Children }}
+                    <li class="pure-menu-item">
+                        <a href="{{ .URL }}">{{ .Name }}</a>
+                    </li>
+                    {{ end }}
+                </ul>
+                {{else}}
+                <li class="pure-menu-item">
+                    <a class="pure-menu-link" href="{{ .URL }}">{{ .Pre }}{{ .Name }}</a> {{end}}
+                </li>
+                {{end}}
+        </ul>
+    </div>
+    <div class="pure-menu">
+        <ul class="pure-menu-list">
             <li class="pure-menu-item">
-              <a href="{{ .URL }}">{{ .Name }}</a>
+                <a class="pure-menu-link" href="/about/"><i class='fa fa-user fa-fw'></i>About</a>
             </li>
-            {{ end }}
-          </ul>
-      {{else}}
-        <li class="pure-menu-item">
-          <a class="pure-menu-link" href="{{ .URL }}">{{ .Pre }}{{ .Name }}</a>
-      {{end}}
-        </li>
-      {{end}}
-    </ul>
-  </div>
-
-  {{ partial "social.html" . }}
-
-  {{ partial "copyright.html" . }}
+            <li class="pure-menu-item">
+                <a class="pure-menu-link" href="/portfolio/"><i class='fa fa-suitcase fa-fw'></i>Portfolio</a>
+            </li>
+            <li class="pure-menu-item">
+                <a class="pure-menu-link" href="/resume/"><i class='fa fa-suitcase fa-fw'></i>Resume</a>
+            </li>
+            <!-- <li class="pure-menu-item">
+                <a class="pure-menu-link" href="/file/Yuji_Shen_Resume.pdf" target="_blank"><i class='fa fa-file fa-fw'></i>Resume</a>
+            </li> -->
+        </ul>
+    </div>
+    {{ partial "social.html" . }} {{ partial "copyright.html" . }}
 </div>
