--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,7 +2,7 @@
 
 <div class="header">
   <h1>{{ .Title }}</h1>
-  <h2>{{ .Description }}</h2>
+  <!-- <h2>{{ .Description }}</h2> -->
 </div>
 <div class="content">
   {{ .Content }}
