--- a/layouts/partials/copyright.html
+++ b/layouts/partials/copyright.html
@@ -1,9 +1,14 @@
-<div class="pure-g">
-  <div class="small-print pure-u-1 pure-u-md-1-1">
-    <small>{{ .Site.Copyright | safeHTML }}</small>
+<div class="pure-g copyright">
+  <div class="pure-u-1 pure-u-md-1-1">
+    <small>{{ .Site.Copyright | safeHTML }}<a href="/">{{ .Site.Params.author | safeHTML }}</a></small>
   </div>
-  <div class="small-print pure-u-1 pure-u-md-1-1">
-    <small>Built with&nbsp;<a href="https://gohugo.io/" target="_blank">Hugo</a></small>
-    <small>Theme&nbsp;<a href="https://github.com/yoshiharuyamashita/blackburn" target="_blank">Blackburn</a></small>
+  <div class="pure-u-1 pure-u-md-1-1">
+    <small>Powered by<a href="https://gohugo.io/" target="_blank">Hugo</a></small>
+  </div>
+  <div class="pure-u-1 pure-u-md-1-1">
+    <small>Theme by<a href="https://github.com/yoshiharuyamashita/blackburn" target="_blank">Blackburn</a></small>
+  </div>
+  <div class="pure-u-1 pure-u-md-1-1">
+    <small>Color Scheme<a href="http://ethanschoonover.com/solarized" target="_blank">Solarized</a></small>
   </div>
 </div>
