--- a/static/css/side-menu.css
+++ b/static/css/side-menu.css
@@ -71,14 +71,20 @@ The content `<div>` is where all your content goes.
     max-width: 800px;
 }
 
-.header h2 {
-    font-size: 1.4em;
-    font-weight: normal;
+.content article header h2 {
+    font-size: 1.5em;
+    font-weight: medium;
     color: #93a1a1;
     border: none;
-    margin: 0.5em 0;
+    margin: 1em 0 0.5em 0;
+    line-height: 1;
 }
-
+.content article header h2 a {
+    color: #b58900;
+}
+.content article header h2 a:hover {
+    color: #268bd2;
+}
 .content-subhead {
     margin: 50px 0 20px 0;
     font-weight: 300;
