--- a/layouts/partials/sidemenu.html
+++ b/layouts/partials/sidemenu.html
@@ -33,7 +33,7 @@
                 <a class="pure-menu-link" href="/portfolio/"><i class='fa fa-suitcase fa-fw'></i>Portfolio</a>
             </li>
             <li class="pure-menu-item">
-                <a class="pure-menu-link" href="/resume/"><i class='fa fa-suitcase fa-fw'></i>Resume</a>
+                <a class="pure-menu-link" href="/resume/"><i class='fa fa-file fa-fw'></i>Resume</a>
             </li>
             <!-- <li class="pure-menu-item">
                 <a class="pure-menu-link" href="/file/Yuji_Shen_Resume.pdf" target="_blank"><i class='fa fa-file fa-fw'></i>Resume</a>
