--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -4,7 +4,7 @@
   <meta name="description" content="{{ if .IsNode }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ else }}{{ with .Description }}{{ . }}{{ end }}{{ end }}">
   {{.Hugo.Generator}}
 
-  <title>{{ if .IsHome }} {{ .Site.Params.author }} &middot; {{ .Title }}{{ else }}{{ .Title }} &middot; {{ .Site.Params.author }}{{ end }}</title>
+  <title>{{ if .IsHome }} {{ .Site.Params.author }} &middot; {{ .Site.Params.subtitle }}{{ else }}{{ .Title }} &middot; {{ .Site.Params.author }}{{ end }}</title>
 
   <!-- CSS -->
   {{ $purecss := "https://cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/" }}
