--- a/static/css/side-menu.css
+++ b/static/css/side-menu.css
@@ -47,17 +47,15 @@ The content `<div>` is where all your content goes.
 */
 
 .content {
-    margin: 0 auto;
+    margin: 2em auto;
     padding: 0 2em;
     max-width: 800px;
-    margin-bottom: 50px;
     line-height: 1.6em;
 }
 
 .header {
-    margin: 0;
     color: #333;
-    margin: 0 auto;
+    margin: 0.5em auto;
     padding: 0 2em;
     max-width: 800px;
 }
@@ -65,10 +63,22 @@ The content `<div>` is where all your content goes.
 .header h1 {
     color: #d33682;
     border: none;
-    font-size: 1.8em;
+    font-size: 2em;
+    /*letter-spacing: 0.1em;*/
     line-height:1.1;
-    margin: 1em auto;
+    margin:1em auto 0.2em auto;
     max-width: 800px;
+}
+
+.header h2 {
+    color: #93a1a1;
+    font-weight: 300;
+    font-style: italic;
+    /*letter-spacing: 0.1em;*/
+    border:none;
+    font-family: times;
+    margin:0;
+    line-height: 1.1;
 }
 
 .content article header h2 {
