--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -29,9 +29,6 @@
   <!-- Icons -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
-  <!-- Fonts -->
-  <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700' rel='stylesheet' type='text/css'>
-
 <!-- Latex -->
 <script type="text/javascript"
   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
@@ -41,8 +38,8 @@
   <link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href="{{ .Site.BaseURL }}index.xml" />
 
   <link href="/css/prism.css" rel="stylesheet" />
-  <script src="/js/prism.js">Prism.highlightAll(false); //false means not async</script>
-  
+  <script src="/js/prism.js">Prism.highlightAll(false);</script>
+
   <link rel="apple-touch-icon" href="/img/apple-touch-icon.png">
 
   {{ partial "favicon.html" . }}
