Use local MathJax; various comparability fixed.

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -30,8 +30,11 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 <!-- Latex -->
-<script type="text/javascript"
+<!--<script type="text/javascript"
   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script> -->
+<script type="text/javascript"
+  src="/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
 
   <!-- RSS -->
