--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -34,7 +34,7 @@
   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script> -->
 <script type="text/javascript"
-  src="/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  src="../../MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
 
   <!-- RSS -->
