--- a/static/css/font.css
+++ b/static/css/font.css
@@ -3,78 +3,78 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 300;
-  src: url('../fonts/roboto-v15-latin-300.eot'); /* IE9 Compat Modes */
+  src: url('http://yuji.im/fonts/roboto-v15-latin-300.eot'); /* IE9 Compat Modes */
   src: local('Roboto Light'), local('Roboto-Light'),
-       url('../fonts/roboto-v15-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/roboto-v15-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/roboto-v15-latin-300.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/roboto-v15-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/roboto-v15-latin-300.svg#Roboto') format('svg'); /* Legacy iOS */
+       url('http://yuji.im/fonts/roboto-v15-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('http://yuji.im/fonts/roboto-v15-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+       url('http://yuji.im/fonts/roboto-v15-latin-300.woff') format('woff'), /* Modern Browsers */
+       url('http://yuji.im/fonts/roboto-v15-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('http://yuji.im/fonts/roboto-v15-latin-300.svg#Roboto') format('svg'); /* Legacy iOS */
 }
 /* roboto-300italic - latin */
 @font-face {
   font-family: 'Roboto';
   font-style: italic;
   font-weight: 300;
-  src: url('../fonts/roboto-v15-latin-300italic.eot'); /* IE9 Compat Modes */
+  src: url('http://yuji.im/fonts/roboto-v15-latin-300italic.eot'); /* IE9 Compat Modes */
   src: local('Roboto Light Italic'), local('Roboto-LightItalic'),
-       url('../fonts/roboto-v15-latin-300italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/roboto-v15-latin-300italic.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/roboto-v15-latin-300italic.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/roboto-v15-latin-300italic.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/roboto-v15-latin-300italic.svg#Roboto') format('svg'); /* Legacy iOS */
+       url('http://yuji.im/fonts/roboto-v15-latin-300italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('http://yuji.im/fonts/roboto-v15-latin-300italic.woff2') format('woff2'), /* Super Modern Browsers */
+       url('http://yuji.im/fonts/roboto-v15-latin-300italic.woff') format('woff'), /* Modern Browsers */
+       url('http://yuji.im/fonts/roboto-v15-latin-300italic.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('http://yuji.im/fonts/roboto-v15-latin-300italic.svg#Roboto') format('svg'); /* Legacy iOS */
 }
 /* roboto-regular - latin */
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/roboto-v15-latin-regular.eot'); /* IE9 Compat Modes */
+  src: url('http://yuji.im/fonts/roboto-v15-latin-regular.eot'); /* IE9 Compat Modes */
   src: local('Roboto'), local('Roboto-Regular'),
-       url('../fonts/roboto-v15-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/roboto-v15-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/roboto-v15-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/roboto-v15-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/roboto-v15-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
+       url('http://yuji.im/fonts/roboto-v15-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('http://yuji.im/fonts/roboto-v15-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('http://yuji.im/fonts/roboto-v15-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('http://yuji.im/fonts/roboto-v15-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('http://yuji.im/fonts/roboto-v15-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
 }
 /* roboto-italic - latin */
 @font-face {
   font-family: 'Roboto';
   font-style: italic;
   font-weight: 400;
-  src: url('../fonts/roboto-v15-latin-italic.eot'); /* IE9 Compat Modes */
+  src: url('http://yuji.im/fonts/roboto-v15-latin-italic.eot'); /* IE9 Compat Modes */
   src: local('Roboto Italic'), local('Roboto-Italic'),
-       url('../fonts/roboto-v15-latin-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/roboto-v15-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/roboto-v15-latin-italic.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/roboto-v15-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/roboto-v15-latin-italic.svg#Roboto') format('svg'); /* Legacy iOS */
+       url('http://yuji.im/fonts/roboto-v15-latin-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('http://yuji.im/fonts/roboto-v15-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
+       url('http://yuji.im/fonts/roboto-v15-latin-italic.woff') format('woff'), /* Modern Browsers */
+       url('http://yuji.im/fonts/roboto-v15-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('http://yuji.im/fonts/roboto-v15-latin-italic.svg#Roboto') format('svg'); /* Legacy iOS */
 }
 /* roboto-500 - latin */
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
-  src: url('../fonts/roboto-v15-latin-500.eot'); /* IE9 Compat Modes */
+  src: url('http://yuji.im/fonts/roboto-v15-latin-500.eot'); /* IE9 Compat Modes */
   src: local('Roboto Medium'), local('Roboto-Medium'),
-       url('../fonts/roboto-v15-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/roboto-v15-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/roboto-v15-latin-500.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/roboto-v15-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/roboto-v15-latin-500.svg#Roboto') format('svg'); /* Legacy iOS */
+       url('http://yuji.im/fonts/roboto-v15-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('http://yuji.im/fonts/roboto-v15-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
+       url('http://yuji.im/fonts/roboto-v15-latin-500.woff') format('woff'), /* Modern Browsers */
+       url('http://yuji.im/fonts/roboto-v15-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('http://yuji.im/fonts/roboto-v15-latin-500.svg#Roboto') format('svg'); /* Legacy iOS */
 }
 /* roboto-700 - latin */
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
-  src: url('../fonts/roboto-v15-latin-700.eot'); /* IE9 Compat Modes */
+  src: url('http://yuji.im/fonts/roboto-v15-latin-700.eot'); /* IE9 Compat Modes */
   src: local('Roboto Bold'), local('Roboto-Bold'),
-       url('../fonts/roboto-v15-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/roboto-v15-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/roboto-v15-latin-700.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/roboto-v15-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/roboto-v15-latin-700.svg#Roboto') format('svg'); /* Legacy iOS */
+       url('http://yuji.im/fonts/roboto-v15-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('http://yuji.im/fonts/roboto-v15-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+       url('http://yuji.im/fonts/roboto-v15-latin-700.woff') format('woff'), /* Modern Browsers */
+       url('http://yuji.im/fonts/roboto-v15-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('http://yuji.im/fonts/roboto-v15-latin-700.svg#Roboto') format('svg'); /* Legacy iOS */
 }
 
 /* roboto-mono-regular - latin */
@@ -82,26 +82,26 @@
   font-family: 'Roboto Mono';
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/roboto-mono-v4-latin-regular.eot'); /* IE9 Compat Modes */
+  src: url('http://yuji.im/fonts/roboto-mono-v4-latin-regular.eot'); /* IE9 Compat Modes */
   src: local('Roboto Mono'), local('RobotoMono-Regular'),
-       url('../fonts/roboto-mono-v4-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/roboto-mono-v4-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/roboto-mono-v4-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/roboto-mono-v4-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/roboto-mono-v4-latin-regular.svg#RobotoMono') format('svg'); /* Legacy iOS */
+       url('http://yuji.im/fonts/roboto-mono-v4-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('http://yuji.im/fonts/roboto-mono-v4-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('http://yuji.im/fonts/roboto-mono-v4-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('http://yuji.im/fonts/roboto-mono-v4-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('http://yuji.im/fonts/roboto-mono-v4-latin-regular.svg#RobotoMono') format('svg'); /* Legacy iOS */
 }
 /* roboto-mono-500 - latin */
 @font-face {
   font-family: 'Roboto Mono';
   font-style: normal;
   font-weight: 500;
-  src: url('../fonts/roboto-mono-v4-latin-500.eot'); /* IE9 Compat Modes */
+  src: url('http://yuji.im/fonts/roboto-mono-v4-latin-500.eot'); /* IE9 Compat Modes */
   src: local('Roboto Mono Medium'), local('RobotoMono-Medium'),
-       url('../fonts/roboto-mono-v4-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/roboto-mono-v4-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/roboto-mono-v4-latin-500.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/roboto-mono-v4-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/roboto-mono-v4-latin-500.svg#RobotoMono') format('svg'); /* Legacy iOS */
+       url('http://yuji.im/fonts/roboto-mono-v4-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('http://yuji.im/fonts/roboto-mono-v4-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
+       url('http://yuji.im/fonts/roboto-mono-v4-latin-500.woff') format('woff'), /* Modern Browsers */
+       url('http://yuji.im/fonts/roboto-mono-v4-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('http://yuji.im/fonts/roboto-mono-v4-latin-500.svg#RobotoMono') format('svg'); /* Legacy iOS */
 }
 
 /* roboto-slab-regular - latin */
@@ -109,26 +109,26 @@
   font-family: 'Roboto Slab';
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/roboto-slab-v6-latin-regular.eot'); /* IE9 Compat Modes */
+  src: url('http://yuji.im/fonts/roboto-slab-v6-latin-regular.eot'); /* IE9 Compat Modes */
   src: local('Roboto Slab Regular'), local('RobotoSlab-Regular'),
-       url('../fonts/roboto-slab-v6-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/roboto-slab-v6-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/roboto-slab-v6-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/roboto-slab-v6-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/roboto-slab-v6-latin-regular.svg#RobotoSlab') format('svg'); /* Legacy iOS */
+       url('http://yuji.im/fonts/roboto-slab-v6-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('http://yuji.im/fonts/roboto-slab-v6-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('http://yuji.im/fonts/roboto-slab-v6-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('http://yuji.im/fonts/roboto-slab-v6-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('http://yuji.im/fonts/roboto-slab-v6-latin-regular.svg#RobotoSlab') format('svg'); /* Legacy iOS */
 }
 /* roboto-slab-700 - latin */
 @font-face {
   font-family: 'Roboto Slab';
   font-style: normal;
   font-weight: 700;
-  src: url('../fonts/roboto-slab-v6-latin-700.eot'); /* IE9 Compat Modes */
+  src: url('http://yuji.im/fonts/roboto-slab-v6-latin-700.eot'); /* IE9 Compat Modes */
   src: local('Roboto Slab Bold'), local('RobotoSlab-Bold'),
-       url('../fonts/roboto-slab-v6-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/roboto-slab-v6-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/roboto-slab-v6-latin-700.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/roboto-slab-v6-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/roboto-slab-v6-latin-700.svg#RobotoSlab') format('svg'); /* Legacy iOS */
+       url('http://yuji.im/fonts/roboto-slab-v6-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('http://yuji.im/fonts/roboto-slab-v6-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+       url('http://yuji.im/fonts/roboto-slab-v6-latin-700.woff') format('woff'), /* Modern Browsers */
+       url('http://yuji.im/fonts/roboto-slab-v6-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('http://yuji.im/fonts/roboto-slab-v6-latin-700.svg#RobotoSlab') format('svg'); /* Legacy iOS */
 }
 
 /* noto-sans-sc-400 */
@@ -137,9 +137,9 @@
   font-style: normal;
   font-weight: 400;
   src: local('Noto Sans SC Regular'), local('NotoSansSC-Regular'),
-       url('../fonts/NotoSansSC-Regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/NotoSansSC-Regular.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/NotoSansSC-Regular.otf') format('truetype'), /* Safari, Android, iOS */
+       url('http://yuji.im/fonts/NotoSansSC-Regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('http://yuji.im/fonts/NotoSansSC-Regular.woff') format('woff'), /* Modern Browsers */
+       url('http://yuji.im/fonts/NotoSansSC-Regular.otf') format('opentype'), /* Safari, Android, iOS */
 }
 /* noto-sans-sc-300 */
 @font-face {
@@ -147,9 +147,9 @@
   font-style: normal;
   font-weight: 300;
   src: local('Noto Sans SC Light'), local('NotoSansSC-Light'),
-       url('../fonts/NotoSansSC-Light.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/NotoSansSC-Light.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/NotoSansSC-Light.otf') format('truetype'), /* Safari, Android, iOS */
+       url('http://yuji.im/fonts/NotoSansSC-Light.woff2') format('woff2'), /* Super Modern Browsers */
+       url('http://yuji.im/fonts/NotoSansSC-Light.woff') format('woff'), /* Modern Browsers */
+       url('http://yuji.im/fonts/NotoSansSC-Light.otf') format('opentype'), /* Safari, Android, iOS */
 }
 /* noto-sans-sc-500 */
 @font-face {
@@ -157,9 +157,9 @@
   font-style: normal;
   font-weight: 500;
   src: local('Noto Sans SC Medium'), local('NotoSansSC-Medium'),
-       url('../fonts/NotoSansSC-Medium.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/NotoSansSC-Medium.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/NotoSansSC-Medium.otf') format('truetype'), /* Safari, Android, iOS */
+       url('http://yuji.im/fonts/NotoSansSC-Medium.woff2') format('woff2'), /* Super Modern Browsers */
+       url('http://yuji.im/fonts/NotoSansSC-Medium.woff') format('woff'), /* Modern Browsers */
+       url('http://yuji.im/fonts/NotoSansSC-Medium.otf') format('opentype'), /* Safari, Android, iOS */
 }
 /* noto-sans-sc-700 */
 @font-face {
@@ -167,7 +167,7 @@
   font-style: normal;
   font-weight: 700;
   src: local('Noto Sans SC Bold'), local('NotoSansSC-Bold'),
-       url('../fonts/NotoSansSC-Bold.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/NotoSansSC-Bold.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/NotoSansSC-Bold.otf') format('truetype'), /* Safari, Android, iOS */
+       url('http://yuji.im/fonts/NotoSansSC-Bold.woff2') format('woff2'), /* Super Modern Browsers */
+       url('http://yuji.im/fonts/NotoSansSC-Bold.woff') format('woff'), /* Modern Browsers */
+       url('http://yuji.im/fonts/NotoSansSC-Bold.otf') format('opentype'), /* Safari, Android, iOS */
 }
