--- a/static/css/font.css
+++ b/static/css/font.css
@@ -139,7 +139,7 @@
   src: local('Noto Sans SC Regular'), local('NotoSansSC-Regular'),
        url('http://yuji.im/fonts/NotoSansSC-Regular.woff2') format('woff2'), /* Super Modern Browsers */
        url('http://yuji.im/fonts/NotoSansSC-Regular.woff') format('woff'), /* Modern Browsers */
-       url('http://yuji.im/fonts/NotoSansSC-Regular.otf') format('opentype'), /* Safari, Android, iOS */
+       url('http://yuji.im/fonts/NotoSansSC-Regular.otf') format('opentype'); /* Safari, Android, iOS */
 }
 /* noto-sans-sc-300 */
 @font-face {
@@ -149,7 +149,7 @@
   src: local('Noto Sans SC Light'), local('NotoSansSC-Light'),
        url('http://yuji.im/fonts/NotoSansSC-Light.woff2') format('woff2'), /* Super Modern Browsers */
        url('http://yuji.im/fonts/NotoSansSC-Light.woff') format('woff'), /* Modern Browsers */
-       url('http://yuji.im/fonts/NotoSansSC-Light.otf') format('opentype'), /* Safari, Android, iOS */
+       url('http://yuji.im/fonts/NotoSansSC-Light.otf') format('opentype'); /* Safari, Android, iOS */
 }
 /* noto-sans-sc-500 */
 @font-face {
@@ -159,7 +159,7 @@
   src: local('Noto Sans SC Medium'), local('NotoSansSC-Medium'),
        url('http://yuji.im/fonts/NotoSansSC-Medium.woff2') format('woff2'), /* Super Modern Browsers */
        url('http://yuji.im/fonts/NotoSansSC-Medium.woff') format('woff'), /* Modern Browsers */
-       url('http://yuji.im/fonts/NotoSansSC-Medium.otf') format('opentype'), /* Safari, Android, iOS */
+       url('http://yuji.im/fonts/NotoSansSC-Medium.otf') format('opentype'); /* Safari, Android, iOS */
 }
 /* noto-sans-sc-700 */
 @font-face {
@@ -169,5 +169,5 @@
   src: local('Noto Sans SC Bold'), local('NotoSansSC-Bold'),
        url('http://yuji.im/fonts/NotoSansSC-Bold.woff2') format('woff2'), /* Super Modern Browsers */
        url('http://yuji.im/fonts/NotoSansSC-Bold.woff') format('woff'), /* Modern Browsers */
-       url('http://yuji.im/fonts/NotoSansSC-Bold.otf') format('opentype'), /* Safari, Android, iOS */
+       url('http://yuji.im/fonts/NotoSansSC-Bold.otf') format('opentype'); /* Safari, Android, iOS */
 }
