--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,6 @@
 </div>
 </div>
-<script src="{{ .Site.BaseURL }}js/ui.js"></script>
-
+<script src="/js/ui.js"></script>
 {{ partial "google_analytics.html" . }}
 
 </body>
