--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,43 +7,46 @@
   <title>{{ if .IsHome }} {{ .Site.Params.author }} &middot; {{ .Site.Params.subtitle }}{{ else }}{{ .Title }} &middot; {{ .Site.Params.author }}{{ end }}</title>
 
   <!-- CSS -->
-  {{ $purecss := "https://cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/" }}
-  <link rel="stylesheet" href="{{ $purecss }}pure-min.css">
+
+  <link rel="stylesheet" href="/css/pure-min.css">
 
   {{ "<!--[if lte IE 8]>" | safeHTML }}
-  <link rel="stylesheet" href="{{ $purecss }}grids-responsive-old-ie-min.css">
+  <link rel="stylesheet" href="/css/grids-responsive-old-ie-min.css">
   {{ "<![endif]-->" | safeHTML }}
   {{ "<!--[if gt IE 8]><!-->" | safeHTML }}
-  <link rel="stylesheet" href="{{ $purecss }}grids-responsive-min.css">
+  <link rel="stylesheet" href="/css/grids-responsive-min.css">
   {{ "<!--<![endif]-->" | safeHTML }}
 
   {{ "<!--[if lte IE 8]>" | safeHTML }}
   <link rel="stylesheet" href="/css/side-menu-old-ie.css">
   {{ "<![endif]-->" | safeHTML }}
   {{ "<!--[if gt IE 8]><!-->" | safeHTML }}
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/side-menu.css">
+  <link rel="stylesheet" href="/css/side-menu.css">
   {{ "<!--<![endif]-->" | safeHTML }}
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/font.css">
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/blackburn.css">
+  <link rel="stylesheet" href="/css/font.css">
+  <link rel="stylesheet" href="/css/blackburn.css">
 
   <!-- Icons -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> -->
+  <link rel="stylesheet" href="http://yuji.im/static/font-awesome/css/font-awesome.min.css">
 
 <!-- Latex -->
 <!--<script type="text/javascript"
   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script> -->
 <script type="text/javascript"
-  src="http://yuji.im/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-</script>
+  src="http://yuji.im/static/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script> 
+
 
   <!-- RSS -->
-  <link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href="{{ .Site.BaseURL }}index.xml" />
+  <link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href="/index.xml" />
 
-  <link href="{{ .Site.BaseURL }}/css/prism.css" rel="stylesheet" />
-  <script src="{{ .Site.BaseURL }}/js/prism.js">Prism.highlightAll(false);</script>
+  <link href="/css/prism.css" rel="stylesheet" />
+  <script src="/js/prism.js">Prism.highlightAll(false);</script>
+  <!-- <script src="/js/ui.js"></script> -->
 
-  <link rel="apple-touch-icon" href="{{ .Site.BaseURL }}/img/apple-touch-icon.png">
+  <link rel="apple-touch-icon" href="/img/apple-touch-icon.png">
 
   {{ partial "favicon.html" . }}
 
