--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -34,8 +34,29 @@
 <!--<script type="text/javascript"
   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script> -->
+<script type="text/x-mathjax-config">
+  MathJax.Hub.Config({
+    extensions: ["tex2jax.js"],
+    jax: ["input/TeX", "output/HTML-CSS"],
+    tex2jax: {
+      inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+      displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
+      processEscapes: true
+    },
+    "HTML-CSS": { availableFonts: ["TeX"] }
+  });
+</script>
+<script type="text/x-mathjax-config;executed=true">
+  //
+  //  The document is hidden until MathJax is finished, then
+  //   this function runs, making it visible again.
+  //
+  MathJax.Hub.Queue(function () {
+    document.getElementById("hide_page").style.visibility = "";
+  });
+</script>
 <script type="text/javascript"
-  src="http://yuji.im/static/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  src="http://yuji.im/static/MathJax/MathJax.js?config=TeX-AMS_HTML-full">
 </script> 
 
 
