--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -8,6 +8,7 @@
 
   <!-- CSS -->
 
+  <link rel="stylesheet" href="/css/font.css">
   <link rel="stylesheet" href="/css/pure-min.css">
 
   {{ "<!--[if lte IE 8]>" | safeHTML }}
@@ -23,17 +24,11 @@
   {{ "<!--[if gt IE 8]><!-->" | safeHTML }}
   <link rel="stylesheet" href="/css/side-menu.css">
   {{ "<!--<![endif]-->" | safeHTML }}
-  <link rel="stylesheet" href="/css/font.css">
-  <link rel="stylesheet" href="/css/blackburn.css">
 
-  <!-- Icons -->
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> -->
-  <link rel="stylesheet" href="http://yuji.im/static/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/css/blackburn.css">
+  
 
 <!-- Latex -->
-<!--<script type="text/javascript"
-  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-</script> -->
 <script type="text/x-mathjax-config">
   MathJax.Hub.Config({
     extensions: ["tex2jax.js"],
@@ -55,17 +50,16 @@
     document.getElementById("hide_page").style.visibility = "";
   });
 </script>
-<script type="text/javascript"
-  src="http://yuji.im/static/MathJax/MathJax.js?config=TeX-AMS_HTML-full">
-</script> 
+<!-- <script async type="text/javascript" src="http://yuji.im/static/MathJax/MathJax.js?config=TeX-AMS_HTML"></script>  -->
 
+
+<link href="/css/prism.css" rel="stylesheet" />
+  <script async src="/js/prism.js">Prism.highlightAll(false);</script>
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href="/index.xml" />
 
-  <link href="/css/prism.css" rel="stylesheet" />
-  <script src="/js/prism.js">Prism.highlightAll(false);</script>
-  <!-- <script src="/js/ui.js"></script> -->
+  
 
   <link rel="apple-touch-icon" href="/img/apple-touch-icon.png">
 
