Replace font-awesome with fontello; Test other MathJax CDN

--- a/layouts/partials/sidemenu.html
+++ b/layouts/partials/sidemenu.html
@@ -27,17 +27,14 @@
     <div class="pure-menu">
         <ul class="pure-menu-list">
             <li class="pure-menu-item">
-                <a class="pure-menu-link" href="/about/"><i class='fa fa-user fa-fw'></i>About</a>
+                <a class="pure-menu-link" href="/about/"><i class='icon-user'></i>About</a>
             </li>
             <li class="pure-menu-item">
-                <a class="pure-menu-link" href="/portfolio/"><i class='fa fa-suitcase fa-fw'></i>Portfolio</a>
+                <a class="pure-menu-link" href="/portfolio/"><i class='icon-suitcase'></i>Portfolio</a>
             </li>
             <li class="pure-menu-item">
-                <a class="pure-menu-link" href="/resume/"><i class='fa fa-file fa-fw'></i>Resume</a>
+                <a class="pure-menu-link" href="/resume/"><i class='icon-file'></i>Resume</a>
             </li>
-            <!-- <li class="pure-menu-item">
-                <a class="pure-menu-link" href="/file/Yuji_Shen_Resume.pdf" target="_blank"><i class='fa fa-file fa-fw'></i>Resume</a>
-            </li> -->
         </ul>
     </div>
     {{ partial "social.html" . }} {{ partial "copyright.html" . }}
