--- a/layouts/shortcodes/latex.html
+++ b/layouts/shortcodes/latex.html
@@ -19,4 +19,5 @@
     document.getElementById("hide_page").style.visibility = "";
   });
 </script>
-<script async type="text/javascript" src="http://yuji.im/static/MathJax/MathJax.js?config=TeX-AMS_HTML"></script>
+<!-- <script async type="text/javascript" src="http://yuji.im/static/MathJax/MathJax.js?config=TeX-AMS_HTML"></script> -->
+<script async type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.6.1/MathJax.js?config=TeX-AMS_HTML"></script>
