--- a/static/css/blackburn.css
+++ b/static/css/blackburn.css
@@ -154,7 +154,7 @@ blockquote cite:before {
 
 .post-meta {
     font-size: 90%;
-    line-height: 1.5em;
+    line-height: 1.7;
 }
 
 .content > .post-meta {
