--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -9,6 +9,7 @@
   <!-- CSS -->
 
   <link rel="stylesheet" href="/css/font.css">
+  <link rel="stylesheet" href="/css/fontello.css">
   <link rel="stylesheet" href="/css/pure-min.css">
 
   {{ "<!--[if lte IE 8]>" | safeHTML }}
@@ -26,40 +27,12 @@
   {{ "<!--<![endif]-->" | safeHTML }}
 
   <link rel="stylesheet" href="/css/blackburn.css">
-  
 
-<!-- Latex -->
-<script type="text/x-mathjax-config">
-  MathJax.Hub.Config({
-    extensions: ["tex2jax.js"],
-    jax: ["input/TeX", "output/HTML-CSS"],
-    tex2jax: {
-      inlineMath: [ ['$','$'], ["\\(","\\)"] ],
-      displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
-      processEscapes: true
-    },
-    "HTML-CSS": { availableFonts: ["TeX"] }
-  });
-</script>
-<script type="text/x-mathjax-config;executed=true">
-  //
-  //  The document is hidden until MathJax is finished, then
-  //   this function runs, making it visible again.
-  //
-  MathJax.Hub.Queue(function () {
-    document.getElementById("hide_page").style.visibility = "";
-  });
-</script>
-<!-- <script async type="text/javascript" src="http://yuji.im/static/MathJax/MathJax.js?config=TeX-AMS_HTML"></script>  -->
-
-
-<link href="/css/prism.css" rel="stylesheet" />
-  <script async src="/js/prism.js">Prism.highlightAll(false);</script>
+  <script src="/js/prism.js">Prism.highlightAll(false);</script>  
+  <link href="/css/prism.css" rel="stylesheet" />
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href="/index.xml" />
-
-  
 
   <link rel="apple-touch-icon" href="/img/apple-touch-icon.png">
 
