--- a/layouts/partials/post_meta.html
+++ b/layouts/partials/post_meta.html
@@ -1,7 +1,7 @@
 <div class="post-meta">
 
   <!-- <div> -->
-    <i class="fa fa-calendar fa-fw"></i>
+    <i class="icon-calendar"></i>
     <time>{{ with .Site.Params.dateFormat }}{{ $.Date.Format . }}{{ else }}{{ .Date.Format "02 Jan 2006, 15:04" }}{{ end }}</time>&nbsp;
   <!-- </div> -->
 
@@ -11,9 +11,9 @@
   {{ $count := len .Params.topics }}
   {{ if gt $count 0 }}
   <!-- <div> -->
-    <i class="fa fa-folder fa-fw"></i>
+    <i class="icon-folder"></i>
     {{ range $k, $v := .Params.topics }}
-      <a class="post-taxonomy-topic" href="{{ $baseUrl }}topics/{{ . | urlize }}">{{ . }}</a>{{ if lt $k (sub $count 1) }}&nbsp;&#47;{{ end }}
+      <a class="post-taxonomy-topic" href="/topics/{{ . | urlize }}">{{ . }}</a>{{ if lt $k (sub $count 1) }}&nbsp;&#47;{{ end }}
     {{ end }}&nbsp;
   <!-- </div> -->
   {{ end }}
@@ -23,9 +23,9 @@
   {{ $count := len .Params.tags }}
   {{ if gt $count 0 }}
   <!-- <div> -->
-    <i class="fa fa-tags fa-fw"></i>
+    <i class="icon-tags"></i>
     {{ range $k, $v := .Params.tags }}
-      <a class="post-taxonomy-tag" href="{{ $baseUrl }}tags/{{ . | urlize }}">{{ . }}</a>{{ if lt $k (sub $count 1) }}&nbsp;&#47;{{ end }}
+      <a class="post-taxonomy-tag" href="/tags/{{ . | urlize }}">{{ . }}</a>{{ if lt $k (sub $count 1) }}&nbsp;&#47;{{ end }}
     {{ end }}
   <!-- </div> -->
   {{ end }}
