--- a/static/css/fontello.css
+++ b/static/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../fonts/fontello.eot?98206763');
-  src: url('../fonts/fontello.eot?98206763#iefix') format('embedded-opentype'),
-       url('../fonts/fontello.woff2?98206763') format('woff2'),
-       url('../fonts/fontello.woff?98206763') format('woff'),
-       url('../fonts/fontello.ttf?98206763') format('truetype'),
-       url('../fonts/fontello.svg?98206763#fontello') format('svg');
+  src: url('http://yuji.im/static/fonts/fontello.eot?98206763');
+  src: url('http://yuji.im/static/fonts/fontello.eot?98206763#iefix') format('embedded-opentype'),
+       url('http://yuji.im/static/fonts/fontello.woff2?98206763') format('woff2'),
+       url('http://yuji.im/static/fonts/fontello.woff?98206763') format('woff'),
+       url('http://yuji.im/static/fonts/fontello.ttf?98206763') format('truetype'),
+       url('http://yuji.im/static/fonts/fontello.svg?98206763#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?98206763#fontello') format('svg');
+    src: url('http://yuji.im/static/font/fontello.svg?98206763#fontello') format('svg');
   }
 }
 */
