Change url for comparability with https

--- a/static/css/blackburn.css
+++ b/static/css/blackburn.css
@@ -178,6 +178,7 @@ article > footer {
     float: left;
     text-align: left;
     overflow: hidden;
+    margin-left: 0.4em;
 }
 
 .prev-next-post .next {
