--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -8,29 +8,17 @@
 
   <!-- CSS -->
 
-  <link rel="stylesheet" href="/css/font.css">
+<!--   <link rel="stylesheet" href="/css/font.css">
   <link rel="stylesheet" href="/css/fontello.css">
   <link rel="stylesheet" href="/css/pure-min.css">
-
-  {{ "<!--[if lte IE 8]>" | safeHTML }}
-  <link rel="stylesheet" href="/css/grids-responsive-old-ie-min.css">
-  {{ "<![endif]-->" | safeHTML }}
-  {{ "<!--[if gt IE 8]><!-->" | safeHTML }}
   <link rel="stylesheet" href="/css/grids-responsive-min.css">
-  {{ "<!--<![endif]-->" | safeHTML }}
-
-  {{ "<!--[if lte IE 8]>" | safeHTML }}
-  <link rel="stylesheet" href="/css/side-menu-old-ie.css">
-  {{ "<![endif]-->" | safeHTML }}
-  {{ "<!--[if gt IE 8]><!-->" | safeHTML }}
   <link rel="stylesheet" href="/css/side-menu.css">
-  {{ "<!--<![endif]-->" | safeHTML }}
-
   <link rel="stylesheet" href="/css/blackburn.css">
+  <link href="/css/prism.css" rel="stylesheet" /> -->
+  <link rel="stylesheet" type="text/css" href="/css/main-min.css">
 
   <script src="/js/prism.js">Prism.highlightAll(false);</script>  
-  <link href="/css/prism.css" rel="stylesheet" />
-
+  
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href="/index.xml" />
 
