--- a/static/css/side-menu.css
+++ b/static/css/side-menu.css
@@ -170,11 +170,11 @@ appears on the left side of the page.
     This styles the selected menu item `<li>`.
     */
 
-#menu .pure-menu-selected,
+/*#menu .pure-menu-selected,
 #menu .pure-menu-heading {
     background: #867962;
 }
-
+*/
 
 /*
         This styles a link within a selected menu item `<li>`.
