Hide comments in button; add comments count

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -38,8 +38,7 @@
 
 }(this, this.document));
 </script>
-
 {{ partial "google_analytics.html" . }}
-
+<script id="dsq-count-scr" src="//yujishen.disqus.com/count.js" async></script>
 </body>
 </html>
