--- a/layouts/partials/post_meta.html
+++ b/layouts/partials/post_meta.html
@@ -2,7 +2,7 @@
 
   <!-- <div> -->
     <i class="icon-calendar"></i>
-    <time>{{ with .Site.Params.dateFormat }}{{ $.Date.Format . }}{{ else }}{{ .Date.Format "02 Jan 2006, 15:04" }}{{ end }}</time>&nbsp;
+    <time>{{ with .Site.Params.dateFormat }}{{ $.Date.Format . }}{{ else }}{{ .Date.Format "02 Jan 2006, 15:04" }}{{ end }}</time>&nbsp;&nbsp;&nbsp;
   <!-- </div> -->
 
   {{ $baseUrl := .Site.BaseURL }}
@@ -14,7 +14,7 @@
     <i class="icon-folder"></i>
     {{ range $k, $v := .Params.topics }}
       <a class="post-taxonomy-topic" href="/topics/{{ . | urlize }}">{{ . }}</a>{{ if lt $k (sub $count 1) }}&nbsp;&#47;{{ end }}
-    {{ end }}&nbsp;
+    {{ end }}&nbsp;&nbsp;&nbsp;
   <!-- </div> -->
   {{ end }}
   {{ end }}
@@ -29,6 +29,7 @@
     {{ end }}
   <!-- </div> -->
   {{ end }}
-  {{ end }}
+  {{ end }}&nbsp;&nbsp;&nbsp;
 
+  <i class='icon-chat'></i> <span class="disqus-comment-count" data-disqus-url="{{ .Permalink }}"> <!-- Count will be inserted here --> </span>
 </div>
