--- a/static/css/fontello.css
+++ b/static/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('https://yuji.im/static/fonts/fontello.eot?98206763');
-  src: url('https://yuji.im/static/fonts/fontello.eot?98206763#iefix') format('embedded-opentype'),
-       url('https://yuji.im/static/fonts/fontello.woff2?98206763') format('woff2'),
-       url('https://yuji.im/static/fonts/fontello.woff?98206763') format('woff'),
-       url('https://yuji.im/static/fonts/fontello.ttf?98206763') format('truetype'),
-       url('https://yuji.im/static/fonts/fontello.svg?98206763#fontello') format('svg');
+  src: url('https://yuji.im/static/fonts/fontello.eot?95889401');
+  src: url('https://yuji.im/static/fonts/fontello.eot?95889401#iefix') format('embedded-opentype'),
+       url('https://yuji.im/static/fonts/fontello.woff2?95889401') format('woff2'),
+       url('https://yuji.im/static/fonts/fontello.woff?95889401') format('woff'),
+       url('https://yuji.im/static/fonts/fontello.ttf?95889401') format('truetype'),
+       url('https://yuji.im/static/fonts/fontello.svg?95889401#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('https://yuji.im/static/font/fontello.svg?98206763#fontello') format('svg');
+    src: url('https://yuji.im/static/fonts/fontello.svg?95889401#fontello') format('svg');
   }
 }
 */
@@ -29,7 +29,7 @@
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
-  margin-right: .2em;
+  /*margin-right: .2em;*/
   text-align: center;
   /* opacity: .8; */
  
@@ -42,7 +42,7 @@
  
   /* Animation center compensation - margins should be symmetric */
   /* remove if not needed */
-  margin-left: .2em;
+  /*margin-left: .2em;*/
  
   /* you can be more comfortable with increased icons size */
   /* font-size: 120%; */
@@ -68,3 +68,4 @@
 .icon-rss-squared:before { content: '\e80a'; } /* '' */
 .icon-angle-circled-left:before { content: '\e80b'; } /* '' */
 .icon-angle-circled-right:before { content: '\e80c'; } /* '' */
+.icon-chat:before { content: '\e80d'; } /* '' */
