--- a/static/css/blackburn.css
+++ b/static/css/blackburn.css
@@ -9,7 +9,12 @@ body {
 }
 
 hr {
-    color: #ddd;
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ddd;
+    margin: 1em 0;
+    padding: 0; 
 }
 
 a,
@@ -26,15 +31,39 @@ a:hover {
 .post-meta {
     color: #93a1a1 !important;
 }
-
+#toc a,
 .post-taxonomy-topic,
 .post-taxonomy-tag {
     color: #93a1a1 !important;
 }
-
+#toc a:hover,
 .post-taxonomy-topic:hover,
 .post-taxonomy-tag:hover {
     color: #268bd2 !important;
+}
+
+#toc {
+    display: block;
+    font-size: 0.8em;
+    float: right;
+    border-radius: 5px;
+    background: #fdf6e3;
+    border-left: 1em solid #fdf6e3;
+    border-bottom: 1em solid #fdf6e3;
+}
+#TableOfContents{
+    padding: 0.5em 0 0.5em 1em;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+#toc ul {
+    padding-left: 1.1em;
+    margin: 0;
+    line-height: 1.5em;
+}
+#toc li {
+    list-style-type: decimal;
+    color: #93a1a1;
 }
 
 h1,
@@ -57,17 +86,16 @@ h1 {
     font-weight: 700;
     border-bottom: 3px double #ddd;
 }
-
 h2 {
     font-size: 1.5em;
     font-weight: 700;
-    border-bottom: 3px double #ddd;
+    border-bottom: 2px solid #ddd;
 }
 
 h3 {
     font-size: 1.3em;
     font-weight: 500;
-    border-bottom: 2px solid #ddd;
+    border-bottom: 1px solid #ddd;
 }
 
 h4 {
@@ -106,6 +134,7 @@ blockquote {
     line-height: 1.4;
     position: relative;
     color: #839496;
+    z-index: -1;
 }
 
 blockquote:before {
